--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./01-asynchronous_javascript.js"></script>
+    <!-- <script src="./01-asynchronous_javascript.js"></script> -->
+    <script src="./02-promises.js"></script>
 </body>
 </html>
