--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <script src="./01-asynchronous_javascript.js"></script> -->
-    <script src="./02-promises.js"></script>
+    <!-- <script src="./02-promises.js"></script> -->
+    <script src="./03-itretor.js"></script>
 </body>
 </html>
