--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <!-- <script src="./01-asynchronous_javascript.js"></script> -->
     <!-- <script src="./02-promises.js"></script> -->
-    <script src="./03-itretor.js"></script>
+    <!-- <script src="./03-itretor.js"></script> -->
+    <script src="./04-generator.js"></script>
 </body>
 </html>
