--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- <script src="./01-asynchronous_javascript.js"></script> -->
     <!-- <script src="./02-promises.js"></script> -->
     <!-- <script src="./03-itretor.js"></script> -->
-    <script src="./04-generator.js"></script>
+    <!-- <script src="./04-generator.js"></script> -->
+    <script src="./05-final.js"></script>
 </body>
 </html>
